# pytemplate-uv

./: .gitignore  CONTRIBUTE.md  README.md  pyproject.toml  pytemplate.py  version.py
pytemplate/: __init__.py  main.py
templates/fastapi-template/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  pyproject.toml
templates/fastapi-template/.github/workflows/: ci.yml
templates/fastapi-template/{{cookiecutter.project_name}}/: .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  {{cookiecutter.envfile}}
templates/fastapi-template/{{cookiecutter.project_name}}/.github/workflows/: ci.yml
templates/fastapi-template/{{cookiecutter.project_name}}/tests/: conftest.py  test_example.py
templates/fastapi-template/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py  db.py  main.py  models.py
templates/fastapi-template/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/: config.py  exceptions.py  middleware.py
templates/fastapi-template/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/routers/: example.py
templates/pyproject-template/: cookiecutter.json
templates/pyproject-template/.github/workflows/: ci.yml
templates/pyproject-template/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  {{cookiecutter.envfile}}
templates/pyproject-template/{{cookiecutter.project_name}}/tests/: test_cli.py
templates/pyproject-template/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py
templates/pyproject_template/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  pyproject.toml
templates/pyproject_template/{{cookiecutter.project_name}}/: .env.template
tests/: conftest.py  test_cli.py
